xong phan don gia

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
         'Home' => root_path,
         'Vật liệu' => vat_lieus_path,
         'Nhà cung cấp' => nha_cung_caps_path,
-        'Đơn giá' => don_gias_path,
+        'Đơn giá' => don_giums_path,
         'Chi' => chis_path
       }.each do |k, v| %>
         <% if request.path == v %>
