--- a/app/views/nha_cung_caps/_new.html.haml
+++ b/app/views/nha_cung_caps/_new.html.haml
@@ -10,7 +10,7 @@
             = f.input_field :ten, class: 'form-control'
             .span.help-block
           = f.input :sodienthoai, label: 'Số điện thoại' do
-            = f.input_field :sodienthoai, class: 'form-control'
+            = f.input_field :sodienthoai, as: :tel, class: 'form-control'
             .span.help-block
           = f.input :note, label: 'Ghi chú' do
             = f.input_field :note, class: 'form-control'
