--- a/app/views/share/update.js.erb
+++ b/app/views/share/update.js.erb
@@ -15,6 +15,9 @@ $('form#edit_<%= model_name %>').clear_previous_errors()
   <% attr_list.each do |attr| %>
     row.push('<%=obj.send(attr)%>')
   <% end %>
+  <% if show_link ||= false %>
+    row.push('<%=escape_javascript link_to_view(obj)%>') 
+  <% end %>
   row.push('<%=escape_javascript link_to_edit(edit_path)%>')
   row.push('<%=escape_javascript link_to_delete(obj)%>')
   $('#<%=table_id%>').DataTable().row.add(row).node().id = '<%=model_name%>_<%=obj_id%>';
