--- a/app/views/hangs/index.html.erb
+++ b/app/views/hangs/index.html.erb
@@ -9,6 +9,7 @@
           <th>Vật liệu</th>
           <th>Giá</th>
           <th>Số lượng</th>
+          <th>Thành tiền</th>
           <th>Ghi chú</th>
           <th></th>
           <th></th>
