--- a/app/views/hoa_dons/index.html.erb
+++ b/app/views/hoa_dons/index.html.erb
@@ -4,10 +4,11 @@
       <thead>
         <tr>
           <th>Id</th>
-          <th>Ngày</th>
+          <th>Thời gian</th>
           <th></th>
           <th>Nhà cung cấp</th>
           <th>Người kí</th>
+          <th>Tổng tiền</th>
           <th>Thanh toán</th>
           <th>Số dư</th>
           <th>Ghi chú</th>
