fix tinh so du cua hoa don

--- a/app/views/hoa_dons/show.html.haml
+++ b/app/views/hoa_dons/show.html.haml
@@ -15,9 +15,9 @@
           %td= @hoa_don.nha_cung_cap.ten
           %td= @hoa_don.nguoi_ki
           %td= @hoa_don.time
-          %td#tong_tien_moi= @hoa_don.tong_tien
+          %td= @hoa_don.tong_tien
           %td= @hoa_don.thanh_toan
-          %td#so_du_moi= @hoa_don.so_du
+          %td= @hoa_don.so_du
           %td= @hoa_don.note
   -if @hoa_don.file?
     %button#button_anh.btn.btn-primary Ẩn/HiệnẢnh
