--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <span id="search_params" hidden="true"><%= @search_params %></span>
     <%= yield %>
   </body>
 </html>
