--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,8 @@
         'Vật liệu' => vat_lieus_path,
         'Nhà cung cấp' => nha_cung_caps_path,
         'Hóa đơn' => hoa_dons_path,
-        'Danh sách hàng' => hangs_path
+        'Danh sách hàng' => hangs_path,
+        'Khoản vay' => khoan_vays_path
       }.each do |k, v| %>
         <% if request.path.include? v %>
           <li class="nav-item active">
