--- a/app/views/hoa_dons/index.html.erb
+++ b/app/views/hoa_dons/index.html.erb
@@ -10,6 +10,7 @@
           <th>Người kí</th>
           <th>Tổng tiền</th>
           <th>Thanh toán</th>
+          <th>Tiền bớt</th>
           <th>Số dư</th>
           <th>Ghi chú</th>
           <th></th>
