--- a/app/views/hoa_dons/show.html.haml
+++ b/app/views/hoa_dons/show.html.haml
@@ -8,6 +8,7 @@
           %th Thời gian
           %th Tổng tiền
           %th Thanh toán
+          %th Tiền bớt
           %th Số dư
           %th Ghi chú
       %tbody
@@ -17,6 +18,7 @@
           %td= @hoa_don.time
           %td= @hoa_don.tong_tien
           %td= @hoa_don.thanh_toan
+          %td= @hoa_don.bot
           %td= @hoa_don.so_du
           %td= @hoa_don.note
 .row
