--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,7 @@
         'Danh sách hàng' => hangs_path,
         'Khoản vay' => khoan_vays_path
       }.each do |k, v| %>
+        <% next if current_user.role != 'admin' and k == 'Khoản vay' %>
         <% if request.path.include? v %>
           <li class="nav-item active">
             <%= link_to k, v, class: 'nav-link' %>
@@ -24,6 +25,9 @@
           </li>
         <% end %>
       <% end %>
+      <li class="nav-item">
+        <%= link_to 'Thoát', destroy_user_session_path, method: :delete, class: 'nav-link' if user_signed_in? %>
+      </li>
     </ul>
   </div>
 </nav>
